objects/LLC_BI__Product_State_Config_Pivot__c.object
<CustomObject>
    <description>This is a system-managed object and is populated via a trigger on the Product_State_Config__c object.</description>
    <fields>
        <fullName>LLC_BI__All_Values__c</fullName>
        <description>This field is populated automatically via formula whenever one of the other &quot;value&quot; fields on this record is populated. It stores the collected values of all states which result in &quot;true&quot; for one of the following checkboxes on product state config: &quot;LLC_BI__Is_Booked__c&quot;, &quot;LLC_BI__Is_Closed__c&quot;, &quot;LLC_BI__Is_Excluded_From_Stage_Duration__c&quot;, or &quot;LLC_BI__Is_Ready_To_Transmit__c&quot;</description>
        <formula>&quot;#&quot; &amp; LLC_BI__Value_1__c &amp; &quot;#&quot; &amp; LLC_BI__Value_2__c &amp; &quot;#&quot; &amp;  LLC_BI__Value_3__c &amp; &quot;#&quot; &amp;  LLC_BI__Value_4__c &amp; &quot;#&quot; &amp;  LLC_BI__Value_5__c &amp; &quot;#&quot; &amp;  LLC_BI__Value_6__c &amp; &quot;#&quot; &amp;  LLC_BI__Value_7__c &amp; &quot;#&quot; &amp;  LLC_BI__Value_8__c &amp; &quot;#&quot; &amp;  LLC_BI__Value_9__c &amp; &quot;#&quot; &amp;  LLC_BI__Value_10__c &amp; &quot;#&quot;</formula>
        <label>All Values</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Value_10__c</fullName>
        <description>This field is populated automatically via trigger whenever a product state config record is configured, and that record is the tenth to have &quot;LLC_BI__Is_Booked__c&quot;, &quot;LLC_BI__Is_Closed__c&quot;, &quot;LLC_BI__Is_Excluded_From_Stage_Duration__c&quot;, or &quot;LLC_BI__Is_Ready_To_Transmit__c&quot; enabled for its parent product type. This field stores the stage and status values which make up the state of true for one of the aforementioned checkboxes.</description>
        <label>Value 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Value_1__c</fullName>
        <description>This field is populated automatically via trigger whenever a product state config record is configured, and that record is the first to have &quot;LLC_BI__Is_Booked__c&quot;, &quot;LLC_BI__Is_Closed__c&quot;, &quot;LLC_BI__Is_Excluded_From_Stage_Duration__c&quot;, or &quot;LLC_BI__Is_Ready_To_Transmit__c&quot; enabled for its parent product type. This field stores the stage and status values which make up the state of true for one of the aforementioned checkboxes.</description>
        <label>Value 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Value_2__c</fullName>
        <description>This field is populated automatically via trigger whenever a product state config record is configured, and that record is the second to have &quot;LLC_BI__Is_Booked__c&quot;, &quot;LLC_BI__Is_Closed__c&quot;, &quot;LLC_BI__Is_Excluded_From_Stage_Duration__c&quot;, or &quot;LLC_BI__Is_Ready_To_Transmit__c&quot; enabled for its parent product type. This field stores the stage and status values which make up the state of true for one of the aforementioned checkboxes.</description>
        <label>Value 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Product State Config Pivot</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Value_1__c</columns>
        <columns>LLC_BI__Value_2__c</columns>
        <columns>LLC_BI__Value_3__c</columns>
        <columns>LLC_BI__Value_4__c</columns>
        <columns>LLC_BI__Value_5__c</columns>
        <columns>LLC_BI__Value_6__c</columns>
        <columns>LLC_BI__Value_7__c</columns>
        <columns>LLC_BI__Value_8__c</columns>
        <columns>LLC_BI__Value_9__c</columns>
        <columns>LLC_BI__Value_10__c</columns>
        <columns>LLC_BI__lookupKey__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{0000000000}</displayFormat>
        <label>Product State Config Pivot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product State Config Pivot</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>